--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       <label class="checkbox"><input type="checkbox" value="TRANS"/> <span>TRANS</span></label>
       <label class="checkbox"><input type="checkbox" value="Trailer"/> <span>Trailer</span></label>
       <label class="checkbox"><input type="checkbox" value="Forklift"/> <span>Forklift</span></label>
+      <label class="checkbox"><input type="checkbox" value="Crane"/> <span>Crane</span></label>
+      <label class="checkbox"><input type="checkbox" value="Excavator"/> <span>Excavator</span></label>
+      <label class="checkbox"><input type="checkbox" value="Agricultural Equipment"/> <span>Agricultural Equipment</span></label>
+      
     </div>
 
     <div class="total" id="total" aria-live="polite"></div>
