--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <style>
     .hidden { display: none; }
     .btn.active { background-color: #007bff; color: white; }
+    .total { margin-top: 15px; font-weight: bold; font-size: 18px; }
   </style>
 </head>
 <body>
@@ -50,6 +51,8 @@
     <div class="checklist hidden" id="checklist-endorsement">
       <label class="checkbox"><input type="checkbox" value="LMV"/> <span>LMV</span></label>
       <label class="checkbox"><input type="checkbox" value="MCWG"/> <span>MCWG</span></label>
+      <label class="checkbox"><input type="checkbox" value="Trans"/> <span>Trans</span></label>
+      <label class="checkbox"><input type="checkbox" value="Trailer"/> <span>Trailer</span></label>
       <label class="checkbox"><input type="checkbox" value="Forklift"/> <span>Forklift</span></label>
       <label class="checkbox"><input type="checkbox" value="Crane"/> <span>Crane</span></label>
       <label class="checkbox"><input type="checkbox" value="Excavator"/> <span>Excavator</span></label>
